--- a/client/src/main.css
+++ b/client/src/main.css
@@ -173,7 +173,8 @@ main {
 #login-main{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  text-align: center;
+  /* justify-content: center; */
   align-items: center;
   margin: auto;
   border: 2px solid #dddddd;
@@ -184,5 +185,14 @@ main {
   min-width: 400px;
   max-width: 800px;
   height: 550px;
+}
+.login-title{
+  font-size: 50px;
+  height: 70px;
+  padding-top: 10px;
+}
+.login-welcome{
+  height: 50px;
+  padding-top: 30px;
 }
 /* --------------------------------------------------------- */
