--- a/client/src/main.css
+++ b/client/src/main.css
@@ -110,7 +110,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 15%;
+  height: fit-content;
   border: 1px solid #dddddd;
   border-radius: 8px;
   background-color: #dddddd;
@@ -122,6 +122,9 @@ main {
   justify-content: right;
   margin-right: 10px;
   margin-top: 10px;
+  min-height: 50px;
+  margin-left: 10px;
+  margin-bottom: 5px;
 }
 #user-message {
   color: #636363;
@@ -141,7 +144,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 15%;
+  height: fit-content;
   border: 1px solid #dddddd;
   border-radius: 8px;
   background-color: #eeeeee;
@@ -153,6 +156,9 @@ main {
   justify-content: left;
   margin-left: 10px;
   margin-top: 10px;
+  min-height: 50px;
+  margin-right: 10px;
+  margin-bottom: 5px;
 }
 #recipient-message {
   color: #636363;
